// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders native select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="makeStyles-root makeStyles-rootFull"
    >
      <div
        aria-autocomplete="list"
        class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium makeStyles-nativeInput MuiInputBase-fullWidth"
      >
        <select
          aria-invalid="false"
          class="MuiNativeSelect-root makeStyles-select MuiNativeSelect-select MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium"
        >
          <option
            disabled=""
            value=""
          >
            Choose an option...
          </option>
          <option
            aria-selected="false"
            role="option"
            value="val1"
          >
            text1
          </option>
          <option
            aria-selected="false"
            role="option"
            value="val2"
          >
            text2
          </option>
          <option
            aria-selected="false"
            role="option"
            value="val3"
          >
            text3
          </option>
        </select>
        <svg
          class="PicassoSvgDropdownArrows16-root makeStyles-caret"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.429 2.715l2.117 3.528a.5.5 0 01-.43.757H5.884a.5.5 0 01-.429-.757l2.117-3.528a.5.5 0 01.858 0zM8.429 13.285l2.117-3.528a.5.5 0 00-.43-.757H5.884a.5.5 0 00-.429.757l2.117 3.528a.5.5 0 00.858 0z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders native select with the empty option enabled when enableReset is \`true\` 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="makeStyles-root makeStyles-rootFull"
    >
      <div
        aria-autocomplete="list"
        class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium makeStyles-nativeInput MuiInputBase-fullWidth"
      >
        <select
          aria-invalid="false"
          class="MuiNativeSelect-root makeStyles-select MuiNativeSelect-select MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium"
        >
          <option
            value=""
          >
            Choose an option...
          </option>
          <option
            aria-selected="false"
            role="option"
            value="val1"
          >
            text1
          </option>
          <option
            aria-selected="false"
            role="option"
            value="val2"
          >
            text2
          </option>
          <option
            aria-selected="false"
            role="option"
            value="val3"
          >
            text3
          </option>
        </select>
        <svg
          class="PicassoSvgDropdownArrows16-root makeStyles-caret"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.429 2.715l2.117 3.528a.5.5 0 01-.43.757H5.884a.5.5 0 01-.429-.757l2.117-3.528a.5.5 0 01.858 0zM8.429 13.285l2.117-3.528a.5.5 0 00-.43-.757H5.884a.5.5 0 00-.429.757l2.117 3.528a.5.5 0 00.858 0z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="makeStyles-root makeStyles-rootFull"
    >
      <div
        class="makeStyles-inputWrapper"
      >
        <div
          aria-autocomplete="list"
          class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium makeStyles-input makeStyles-readOnlyInput MuiInputBase-fullWidth"
          role="textbox"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium makeStyles-readOnlyInput"
            readonly=""
            size="1"
            type="text"
            value="text1"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <svg
          class="PicassoSvgDropdownArrows16-root makeStyles-caret"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.429 2.715l2.117 3.528a.5.5 0 01-.43.757H5.884a.5.5 0 01-.429-.757l2.117-3.528a.5.5 0 01.858 0zM8.429 13.285l2.117-3.528a.5.5 0 00-.43-.757H5.884a.5.5 0 00-.429.757l2.117 3.528a.5.5 0 00.858 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`should filter options based on entered value to the input field 1`] = `
<ul
  class="MuiList-root PicassoScrollMenu-menu"
  role="menu"
  tabindex="-1"
>
  <div
    class="PicassoScrollMenu-scrollView"
    tabindex="0"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val2"
    >
      <span
        class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
      >
        text2
      </span>
    </li>
  </div>
</ul>
`;

exports[`should open menu when focus on select 1`] = `
<ul
  class="MuiList-root PicassoScrollMenu-menu"
  role="menu"
  tabindex="-1"
>
  <div
    class="PicassoScrollMenu-scrollView"
    tabindex="0"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val1"
    >
      <span
        class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
      >
        text1
      </span>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val2"
    >
      <span
        class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
      >
        text2
      </span>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val3"
    >
      <span
        class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
      >
        text3
      </span>
    </li>
  </div>
</ul>
`;

exports[`should render options customly 1`] = `
<ul
  class="MuiList-root PicassoScrollMenu-menu"
  role="menu"
  tabindex="-1"
>
  <div
    class="PicassoScrollMenu-scrollView"
    tabindex="0"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val1"
    >
      <div>
        Custom renderered text1
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val2"
    >
      <div>
        Custom renderered text2
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val3"
    >
      <div>
        Custom renderered text3
      </div>
    </li>
  </div>
</ul>
`;
